车架号 ford_vin_fingerprint.ipynb

--- a/tools/car_porting/examples/ford_vin_fingerprint.ipynb
+++ b/tools/car_porting/examples/ford_vin_fingerprint.ipynb
@@ -117,8 +117,8 @@
       "vin: 1FMCU9J94MUXXXXXX real platform: FORD ESCAPE 4TH GEN                determined platform: mock                              correct: False\n",
       "vin: 3FTTW8E33NRXXXXXX real platform: FORD MAVERICK 1ST GEN              determined platform: mock                              correct: False\n",
       "vin: 3FMCR9B69NRXXXXXX real platform: FORD BRONCO SPORT 1ST GEN          determined platform: mock                              correct: False\n",
-      "vin: 1FM5K8GC7LGXXXXXX real platform: FORD EXPLORER 6TH GEN              determined platform: mock                              correct: False\n",
-      "vin: 5LM5J7XC9LGXXXXXX real platform: FORD EXPLORER 6TH GEN              determined platform: mock                              correct: False\n",
+      "vin: LVSHNCAH3LH496768 real platform: FORD EXPLORER 6TH GEN              determined platform: mock                              correct: False\n",
+      "vin: LVSHNCAH3LHXXXXXX real platform: FORD EXPLORER 6TH GEN              determined platform: mock                              correct: False\n",
       "vin: 5LM5J7XC1LGXXXXXX real platform: FORD EXPLORER 6TH GEN              determined platform: mock                              correct: False\n",
       "vin: 3FTTW8F97NRXXXXXX real platform: FORD MAVERICK 1ST GEN              determined platform: mock                              correct: False\n",
       "vin: 3FTTW8E99NRXXXXXX real platform: FORD MAVERICK 1ST GEN              determined platform: mock                              correct: False\n"
